[feat] 검색 엔진 최적화

--- a/index.html
+++ b/index.html
@@ -5,18 +5,21 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg" href="./src/assets/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="박유림 오소민 이현석 전원근" />
+    <meta name="keywords" content="마켓컬리" />
+    <meta
+      name="description"
+      content="멋쟁이사자처럼 프론트엔드스쿨 4기 리액트 프로젝트 1조 마켓컬리 클론코딩 웹사이트"
+    />
     <meta property="og:title" content="마켓컬리 클론코딩" />
     <meta
       property="og:description"
       content="멋쟁이사자처럼 프론트엔드스쿨 4기 리액트 프로젝트 1조 마켓컬리 클론코딩 웹사이트"
     />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="web url" />
+    <meta property="og:url" content="https://market-karly-clone.netlify.app/" />
     <meta property="og:image" content="./src/assets/logo.svg" />
-    <meta
-      property="og:article:author"
-      content="박유림 오소민 이현석 전원근 황혜인"
-    />
+    <meta property="og:article:author" content="박유림 오소민 이현석 전원근" />
   </head>
   <body>
     <div id="modal__root"></div>
